testsuite/negative/no-default-ctor.n
public class A
{
  public this (_ : int) { }
}

public class B : A // E: wrong number of parameters in call, needed 1, got 0
{
  static Main () : void {  }
}
